--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="js/logic.js"></script>
 </head>
+
 <body>
     <header class="header">Christmas Trivia Game!
         <h2 class="badjoke">For Best Results: <br> 1. have cocoa ready <br> 2. Mariah Carey on repeat*</h2>
     </header>
-    
+
     <div class="row">
         <div id="leftColumn" class="col-md-2"></div>
         <div class="gameBody" class="col-md-8">
@@ -26,10 +29,10 @@
             <div class="question-box">
                 <div class="question">The question will go Here</div>
                 <div class="choices">
-                    <input type="radio" name="answers" id="q1">  Q1<br>
-                    <input type="radio" name="answers" id="q2">  Q2<br>
-                    <input type="radio" name="answers" id="q3">  Q3<br>
-                    <input type="radio" name="answers" id="q4">  Q4<br>
+                    <input type="radio" name="answers" id="q1"> Q1<br>
+                    <input type="radio" name="answers" id="q2"> Q2<br>
+                    <input type="radio" name="answers" id="q3"> Q3<br>
+                    <input type="radio" name="answers" id="q4"> Q4<br>
                 </div>
             </div>
             <button id="startButton">Start/Reset</button>
@@ -40,6 +43,7 @@
 
     </div>
 
-<footer>*JustkiddingthatMariahCareysongsucks</footer>
+    <footer>*JustkiddingthatMariahCareysongsucks</footer>
 </body>
+
 </html>
