--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/logic.js"></script>
 </head>
 
@@ -29,6 +29,7 @@
             <div class="question-box">
                 <div class="question">The question will go Here</div>
                 <div class="choices">
+                    <div id="demo">f</div>
                     <input type="radio" name="answers" id="q1"> Q1<br>
                     <input type="radio" name="answers" id="q2"> Q2<br>
                     <input type="radio" name="answers" id="q3"> Q3<br>
@@ -44,6 +45,7 @@
     </div>
 
     <footer>*JustkiddingthatMariahCareysongsucks</footer>
+
 </body>
 
 </html>
