--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="question-box">
                 <div class="question">The question will go Here</div>
                 <div class="choices">
-                    <div id="demo">f</div>
+                    <div id="demo"></div>
                     <input type="radio" name="answers" id="q1"> Q1<br>
                     <input type="radio" name="answers" id="q2"> Q2<br>
                     <input type="radio" name="answers" id="q3"> Q3<br>
