--- a/index.html
+++ b/index.html
@@ -29,11 +29,22 @@
             <div class="question-box">
                 <div class="question">The question will go Here</div>
                 <div class="choices">
-                    <div id="demo"></div>
-                    <input type="radio" name="answers" id="q1"> Q1<br>
-                    <input type="radio" name="answers" id="q2"> Q2<br>
-                    <input type="radio" name="answers" id="q3"> Q3<br>
-                    <input type="radio" name="answers" id="q4"> Q4<br>
+                    <div class="row">
+                        <input type="radio" name="answers" value="1"><br>
+                        <div class="q1">Answer1</div>
+                    </div>
+                    <div class="row">
+                        <input type="radio" name="answers" value="2"><br>
+                        <div class="q2">Answer2</div>
+                    </div>
+                    <div class="row">
+                        <input type="radio" name="answers" value="3"><br>
+                        <div class="q3">Answer3</div>
+                    </div>
+                    <div class="row">
+                        <input type="radio" name="answers" value="4"><br>
+                        <div class="q4">Answer4</div>
+                    </div>
                 </div>
             </div>
             <button id="startButton">Start/Reset</button>
