start timer is ready

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     </div>
                 </div>
             </div>
-            <button id="startButton">Start/Reset</button>
+            <button id="startButton">Start</button>
+            <button id="resetButton">Reset</button>
             <div class="correct">Questions correct: 0</div>
             <div class="incorrect">Questions incorrect: 0</div>
         </div>
