endGame() might not work, array of functions is calling each function

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/logic.js"></script>
 </head>
@@ -27,7 +27,7 @@
                 <div class="actualTimer"></div>
             </div>
             <div class="question-box">
-                <div class="question">The question will go Here</div>
+                <div class="question">Get ready! You will have 10 seconds to answer each question</div>
                 <div class="choices">
                     <div class="row">
                         <input type="radio" name="answers" value="1"><br>
@@ -49,8 +49,6 @@
             </div>
             <button id="startButton">Start</button>
             <button id="resetButton">Reset</button>
-            <div class="correct">Questions correct: 0</div>
-            <div class="incorrect">Questions incorrect: 0</div>
         </div>
         <div id="rightColumn" class="col-md-2"></div>
 
