everything works except grabbing the value of the radio buttons

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             </div>
             <div class="question-box">
                 <div class="question">Get ready! You will have 10 seconds to answer each question</div>
+                <div class="answer"></div>
+                <div class="rightORWrong"></div>
                 <div class="choices">
                     <div class="row">
                         <input type="radio" name="answers" value="1"><br>
